Need to refactor deducing

--- a/Expression BST/ebst/CMakeLists.txt
+++ b/Expression BST/ebst/CMakeLists.txt
@@ -1,6 +1,11 @@
-add_library(ebst INTERFACE)
+add_library(ebst INTERFACE
+	#EBST.h
+	#Operand.h
+	#Operator.h
+	#Operator.cpp
+)
 
-target_sources(ebst INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/EBST.h)
+target_sources(rbst INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/Operand.h)
 
 target_link_libraries(ebst INTERFACE abst)
 
