Operator impl + tests

--- a/Expression BST/ebst/CMakeLists.txt
+++ b/Expression BST/ebst/CMakeLists.txt
@@ -1,11 +1,9 @@
-add_library(ebst INTERFACE
+add_library(ebst STATIC
 	#EBST.h
-	#Operand.h
-	#Operator.h
-	#Operator.cpp
+	Operand.h
+	Operator.h
+	Operator.cpp
 )
-
-target_sources(rbst INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/Operand.h)
 
 target_link_libraries(ebst INTERFACE abst)
 
