More refactoring, interface for EBST

--- a/Expression BST/ebst/CMakeLists.txt
+++ b/Expression BST/ebst/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(ebst STATIC
-	#EBST.h
+	EBST.h
 	ExpressionNode.h
 	ExpressionNode.cpp
 )
 
-target_link_libraries(ebst INTERFACE abst)
+target_link_libraries(ebst PUBLIC abst)
 
 target_include_directories(ebst INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
